// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders a default dropdown 1`] = `
<Hookshot
  attachmentBehavior="flip"
  attachmentMargin={0}
  contentAttachment={
    {
      "horizontal": "start",
      "vertical": "top",
    }
  }
  contentOffset={
    {
      "horizontal": 0,
      "vertical": 0,
    }
  }
  isEnabled={true}
  isOpen={false}
  targetAttachment={
    {
      "horizontal": "start",
      "vertical": "bottom",
    }
  }
  targetOffset={
    {
      "horizontal": 0,
      "vertical": 0,
    }
  }
  targetRef={[Function]}
>
  <OnClickOutside(HookshotContent)
    eventTypes={
      [
        "mousedown",
        "touchstart",
      ]
    }
    excludeScrollbar={false}
    onEsc={[Function]}
    onOutsideClick={[Function]}
    outsideClickIgnoreClass="ignore-react-onclickoutside"
    preventDefault={false}
    stopPropagation={false}
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={true}
      focusTrapOptions={
        {
          "clickOutsideDeactivates": true,
          "returnFocusOnDeactivate": true,
        }
      }
      paused={false}
    >
      <InjectIntl(DropdownList)
        requestClose={[Function]}
      >
        <Item
          label="1st Option"
          onSelect={[Function]}
        />
      </InjectIntl(DropdownList)>
    </FocusTrap>
  </OnClickOutside(HookshotContent)>
</Hookshot>
`;

exports[`Dropdown renders a dropdown with a bounding ref 1`] = `
<Hookshot
  attachmentBehavior="flip"
  attachmentMargin={0}
  contentAttachment={
    {
      "horizontal": "start",
      "vertical": "top",
    }
  }
  contentOffset={
    {
      "horizontal": 0,
      "vertical": 0,
    }
  }
  isEnabled={true}
  isOpen={false}
  targetAttachment={
    {
      "horizontal": "start",
      "vertical": "bottom",
    }
  }
  targetOffset={
    {
      "horizontal": 0,
      "vertical": 0,
    }
  }
  targetRef={[Function]}
>
  <OnClickOutside(HookshotContent)
    eventTypes={
      [
        "mousedown",
        "touchstart",
      ]
    }
    excludeScrollbar={false}
    onEsc={[Function]}
    onOutsideClick={[Function]}
    outsideClickIgnoreClass="ignore-react-onclickoutside"
    preventDefault={false}
    stopPropagation={false}
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={true}
      focusTrapOptions={
        {
          "clickOutsideDeactivates": true,
          "returnFocusOnDeactivate": true,
        }
      }
      paused={false}
    >
      <InjectIntl(DropdownList)
        requestClose={[Function]}
      >
        <Item
          label="1st Option"
          onSelect={[Function]}
        />
      </InjectIntl(DropdownList)>
    </FocusTrap>
  </OnClickOutside(HookshotContent)>
</Hookshot>
`;

exports[`Dropdown renders a dropdown with a set width 1`] = `
<Hookshot
  attachmentBehavior="flip"
  attachmentMargin={0}
  contentAttachment={
    {
      "horizontal": "start",
      "vertical": "top",
    }
  }
  contentOffset={
    {
      "horizontal": 0,
      "vertical": 0,
    }
  }
  isEnabled={true}
  isOpen={false}
  targetAttachment={
    {
      "horizontal": "start",
      "vertical": "bottom",
    }
  }
  targetOffset={
    {
      "horizontal": 0,
      "vertical": 0,
    }
  }
  targetRef={[Function]}
>
  <OnClickOutside(HookshotContent)
    eventTypes={
      [
        "mousedown",
        "touchstart",
      ]
    }
    excludeScrollbar={false}
    onEsc={[Function]}
    onOutsideClick={[Function]}
    outsideClickIgnoreClass="ignore-react-onclickoutside"
    preventDefault={false}
    stopPropagation={false}
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={true}
      focusTrapOptions={
        {
          "clickOutsideDeactivates": true,
          "returnFocusOnDeactivate": true,
        }
      }
      paused={false}
    >
      <InjectIntl(DropdownList)
        requestClose={[Function]}
        width="470px"
      >
        <Item
          label="1st Option"
          onSelect={[Function]}
        />
      </InjectIntl(DropdownList)>
    </FocusTrap>
  </OnClickOutside(HookshotContent)>
</Hookshot>
`;

exports[`Dropdown renders a dropdown with multiple children 1`] = `
<Hookshot
  attachmentBehavior="flip"
  attachmentMargin={0}
  contentAttachment={
    {
      "horizontal": "start",
      "vertical": "top",
    }
  }
  contentOffset={
    {
      "horizontal": 0,
      "vertical": 0,
    }
  }
  isEnabled={true}
  isOpen={false}
  targetAttachment={
    {
      "horizontal": "start",
      "vertical": "bottom",
    }
  }
  targetOffset={
    {
      "horizontal": 0,
      "vertical": 0,
    }
  }
  targetRef={[Function]}
>
  <OnClickOutside(HookshotContent)
    eventTypes={
      [
        "mousedown",
        "touchstart",
      ]
    }
    excludeScrollbar={false}
    onEsc={[Function]}
    onOutsideClick={[Function]}
    outsideClickIgnoreClass="ignore-react-onclickoutside"
    preventDefault={false}
    stopPropagation={false}
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={true}
      focusTrapOptions={
        {
          "clickOutsideDeactivates": true,
          "returnFocusOnDeactivate": true,
        }
      }
      paused={false}
    >
      <InjectIntl(DropdownList)
        requestClose={[Function]}
      >
        <Item
          label="1st Option"
          onSelect={[Function]}
        />
        <Item
          label="2nd Option"
          onSelect={[Function]}
        />
        <Item
          label="3rd Option"
          onSelect={[Function]}
        />
      </InjectIntl(DropdownList)>
    </FocusTrap>
  </OnClickOutside(HookshotContent)>
</Hookshot>
`;

exports[`Dropdown renders an open dropdown 1`] = `
<Hookshot
  attachmentBehavior="flip"
  attachmentMargin={0}
  contentAttachment={
    {
      "horizontal": "start",
      "vertical": "top",
    }
  }
  contentOffset={
    {
      "horizontal": 0,
      "vertical": 0,
    }
  }
  isEnabled={true}
  isOpen={true}
  targetAttachment={
    {
      "horizontal": "start",
      "vertical": "bottom",
    }
  }
  targetOffset={
    {
      "horizontal": 0,
      "vertical": 0,
    }
  }
  targetRef={[Function]}
>
  <OnClickOutside(HookshotContent)
    eventTypes={
      [
        "mousedown",
        "touchstart",
      ]
    }
    excludeScrollbar={false}
    onEsc={[Function]}
    onOutsideClick={[Function]}
    outsideClickIgnoreClass="ignore-react-onclickoutside"
    preventDefault={false}
    stopPropagation={false}
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={true}
      focusTrapOptions={
        {
          "clickOutsideDeactivates": true,
          "returnFocusOnDeactivate": true,
        }
      }
      paused={false}
    >
      <InjectIntl(DropdownList)
        requestClose={[Function]}
      >
        <Item
          label="1st Option"
          onSelect={[Function]}
        />
      </InjectIntl(DropdownList)>
    </FocusTrap>
  </OnClickOutside(HookshotContent)>
</Hookshot>
`;
